--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,38 @@ html {
   line-height: 1.4;
 }
 
+/**
+ banner
+ */
+.banner{
+  padding: 20px 0;
+  text-align: center;
+  background-color: #999ea4;
+}
+
+/**
+ link styling
+ */
+a:link{
+  color: black;
+  text-decoration: none;
+}
+a:visited{
+  color: black;
+}
+a:hover{
+  text-decoration: underline;
+}
+/**
+ table + list styling
+ */
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
+li:nth-child(odd){
+  background-color: #dddddd;
+}
+
 /*
  * Remove text-shadow in selection highlight:
  * https://twitter.com/miketaylr/status/12228805301
