--- a/css/normalize.css
+++ b/css/normalize.css
@@ -24,10 +24,7 @@ a:visited{
 a:hover{
   text-decoration: underline;
 }
-tr:nth-child(even) {
-  background-color: #dddddd;
-}
-ul.movielist-group li {
+.movielist-group li {
   display: inline-block;
   text-align: center;
   font-family: sans-serif;
@@ -36,9 +33,8 @@ ul.movielist-group li {
   margin: 5px;
   padding: 2px;
 }
-ul.movielist-group {
+.movielist-group {
   align-content: center;
-  padding-left: 100px;
 }
 
 /**
